src/index.css
/* ... */
input::placeholder {
  color: #F2F3F8;
  opacity: 0.4;
}

input:focus {
  background-color: rgba(44,77,142,0.1);
  border: 2px solid #2A4D8E;
}

.form-input {
  background-color: rgba(217, 217, 217, 0.02);
  height: 40px;
  width: 25vw;
  border-radius: 10px;
  border: 1px solid #2E333B;
  padding-left: 15px;
  font-size: 16px;
  color: #F2F3F8;
  font-family: "Nunito";
  transition: background-color 0.3s ease;
}

.form-element {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

.form-element:focus-within .FormCircle {
  background-color: #F2F3F8;
}

.form-element .form-input:not(:placeholder-shown) ~ .FormCircle {
  background-color: #3CC9A7;
}

.form-input:not(:placeholder-shown) {
  background-color: transparent;
}

.FormCircle {
  width: 6px;
  height: 6px;
  background-color: #f2f3f849;
  border-radius: 50%;
  position: absolute;
  right: 15px;
  transition: background-color 0.3s ease;
}

.slider-wrapper {
  display: flex;
  align-items: center;
  width: 100%;
  gap: 20px;
  margin-left: -12px;
}

/* Input Slider */
.slider {
  -webkit-appearance: none;
  appearance: none;
  width: 68%;
  height: 40px;
  border-radius: 10px;
  background: linear-gradient(to right, #3cc9a826 0%, #3cc9a82a var(--progress), rgba(42,77,142,0.1) var(--progress), rgba(42,77,142,0.1) 100%);
  outline: none;
  cursor: pointer;
}

.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 40px;
  height: 40px;
  background: #001336; /* Thumb color */
  border: 5px solid #3CC9A7; /* Outer border matches the bar's progress color */
  border-radius: 10%;
  cursor: pointer;
  position: relative;
}

.slider::-moz-range-thumb {
  width: 40px;
  height: 40px;
  background: #001336;
  border: 5px solid #f90;
  border-radius: 50%;
  cursor: pointer;
}

/* Value Display */
.slider-value {
  font-size: 25px;
  font-weight: 500;
  color: #3CC9A7;
  min-width: 80px;
  font-family: "Poppins", sans-serif;
  padding-left: 15px;
}

/* Label */
.slider-label {
  font-size: 16px;
  color: #F2F3F8;
  font-family: "Nunito";
  position: absolute;
  margin-top: 10px;
  margin-left: 5px;
  z-index: 10;
  pointer-events: none;
}

.FullRow, .FullRowMobile {
  width: 80vw;
}

.FullRowMobile{
  margin-top: 20px;
  margin-bottom: 20px;
  margin-left: 15px;
}

#ProjectDetails {
  width: 80vw;
}

#message {
  width: 80.4vw;
  height: 80px;
  padding-top: 10px;
  max-height: 130px;
  min-height: 35px;
}

.SubmitContact {
  background-color: rgba(101,119,201,0.1);
  border: 1px solid #606A7B;
  border-radius: 15px;
  padding: 12px 45px;
  font-family: "League Spartan";
  font-size: 18px;
  color: #FFFFFF;
}

.SubmitContact:hover {
  background-color: #2A4D8E;
  transition: background-color 0.3s ease;
  cursor: pointer;
}

.HoldSubmit {
  align-items: center;
}

.BottomFooter {
  position: absolute; 
  top: calc(4000px + 40vh);
  left: 50%; 
  transform: translateX(-50%); 
  display: flex;
  justify-content: center; 
  align-items: center; 
  z-index: 5;
  width: 100%;
}

.responsive-footer{
  width: 100%;
}

@media (max-width: 768px) {
  .responsive-footer {
    transform: scale(1.5);
    transform-origin: center;
    overflow-x: hidden;
    top: 5000px;
  }
  .BottomFooter {
    top: 6200px;
  }
  .form-element{
    width: 85vw;
  }
  .form-input{
    width: 80vw;
  }
}




a {
  text-decoration: none;
}

/* Use the below line to identify overflow and correct for mobile */
/* * {
  outline: 1px solid rgba(255, 0, 0, 0.2);
} */


input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  background-clip: content-box !important;
  background-color: rgba(255, 244, 244, 0.2) !important; /* Reset background */
  color: #F2F3F8 !important; /* Set text color */
  -webkit-text-fill-color: #F2F3F8 !important; /* Force text color */
  box-shadow: 0 0 0px 1000px #121212 inset !important; /* Override autofill yellow */
  transition: background-color 5000s ease-in-out 0s; /* Ensure autofill doesn't apply */
}

